Testing for a fix on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -203,7 +203,6 @@ section{
     margin: 0;
     padding: 0;
     line-height:0;
-    width: 100%;
     height: 100%;
     z-index: 1;
 }
